--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project_vasileva</title>
+    <title>Перевод</title>
 </head>
 <body>
+    <h1>Заголовок</h1>
     Главная страница
+
 </body>
 </html>
