--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Перевод</title>
 </head>
 <body>
-    <h1>Заголовок</h1>
+    <h1>Делаем работу переводчика проще</h1>
     Главная страница
 
 </body>
