--- a/index.html
+++ b/index.html
@@ -2,10 +2,27 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TranslateMate</title>
 </head>
 <body>
+  <header>
+      <img scr="translate" alt="Логотип" width="250" length="250">
+      <nav>
+          <ul>
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">Каталог</a></li>
+              <li><a href="#">Контакты</a></li>
+          </ul>
+      </nav>
+    <button>Кнопка</button>
+  </header>
+<main>
+    <footer>
+        
+    </footer>
+</main>
     <h1>Делаем работу переводчика проще</h1>
     Главная страница
 
