--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TranslateMate</title>
+    <title>ПереводчикPRO</title>
 </head>
 <body>
   <header>
@@ -23,7 +23,7 @@
         
     </footer>
 </main>
-    <h1>Делаем работу переводчика проще</h1>
+    <h1>С нами ты станешь мастером перевода</h1>
     Главная страница
 
 </body>
