--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <li><a href="#">Контакты</a></li>
           </ul>
       </nav>
-    <button>Кнопка</button>
+    <button>Выбрать курс</button>
   </header>
 <main>
     <footer>
