--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <header>
-      <img scr="./images/logo.png" alt="logo" width="250" length="250">
+      <img src="./images/logo.png" alt="logo" width="250" length="250">
+      <img src="" alt="">
       <nav>
           <ul>
               <li><a href="#">Главная</a></li>
