--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-      <img src="./images/logo.png" alt="logo" width="250" length="250">
+      <img src="./images/logo.png" width="250" length="250">
       <nav>
           <ul>
               <li><a href="#">Главная</a></li>
