--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-      <img src="./images/logo.png" width="250" lenght="250">
+      <img alt="logo" width="250" length="250" src="./images/logo.png">
       <nav>
           <ul>
               <li><a href="#">Главная</a></li>
