--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <nav>
           <ul>
               <li><a href="#">Главная</a></li>
-              <li><a href="#">Каталог</a></li>
+              <li><a href="#">Курсы</a></li>
+              <li><a href="#">О нас</a></li>
+               <li><a href="#">Наши преподаватели</a></li>
               <li><a href="#">Контакты</a></li>
           </ul>
       </nav>
