--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <header>
       <img alt="logo" width="250" length="250" src="./images/logo.png">
       <nav>
+
+      </nav>
+      <a href="login.html">Вход</a>
           <ul>
               <li><a href="#">Главная</a></li>
               <li><a href="#">Курсы</a></li>
