--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
       </nav>
     <button>Выбрать курс</button>
   </header>
-<main>
+<main class="main">
+    <section>
+    <div>
+        <h2>Курсы для переводчиков</h2>
+        <a href="#" target="_blank">Все курсы</a>
+    </div>
+    </section>
+    <section>
+        
+    </section>
     <footer>
         
     </footer>
