--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     <div>
         <ul>
             <li>
-                
+               <h3>Повышение квалификации</h3> 
+                <p>Длительность: 50 часов</p>
+                <p>Модулей: 3</p>
+                <a href="#">Узнать подробнее</a>
+                <span>От 10 000 P</span>
             </li>
         </ul>
         <h2>Курсы для переводчиков</h2>
