--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div>
         <ul>
             <li>
+                <img src="images" alt="ДЛЯ ПРОЕКТА" width="50" height="50">
                <h3>Повышение квалификации</h3> 
                 <p>Длительность: 50 часов</p>
                 <p>Модулей: 3</p>
