--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
                 <a href="#">Узнать подробнее</a>
                 <span>От 10 000 P</span>
             </li>
+            <li>
+                <img alt="перев" width="50" length="50" src="./images/ДЛЯ ПРОЕКТА.png">
+                <h3>Устная переводческая скоропись</h3> 
+                <p>Длительность: 35 часов</p>
+                <p>Модулей: 3</p>
+                <a href="#">Узнать подробнее</a>
+                <span>От 6 500 P</span>
+                
+            </li>
         </ul>
         <h2>Курсы для переводчиков</h2>
         <a href="#" target="_blank">Все курсы</a>
