--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
                 <p>Модулей: 3</p>
                 <a href="#">Узнать подробнее</a>
                 <span>От 6 500 P</span>
-                
+            </li>
+            <li>
+                <img alt="перев" width="50" length="50" src="./images/ДЛЯ ПРОЕКТА.png">
+                <h3>Специальный перевод</h3> 
+                <p>Длительность: 40 часов</p>
+                <p>Модулей: 3</p>
+                <a href="#">Узнать подробнее</a>
+                <span>От 8 500 P</span>
             </li>
         </ul>
         <h2>Курсы для переводчиков</h2>
