--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div>
         <ul>
             <li>
-                <img alt="перев" width="50" length="50" src="./images/ДЛЯ ПРОЕКТА.png">
+                <img alt="перев" width="100" length="100" src="./images/ДЛЯ ПРОЕКТА.png">
                 <h3>Повышение квалификации</h3> 
                 <p>Длительность: 50 часов</p>
                 <p>Модулей: 3</p>
@@ -36,7 +36,7 @@
                 <span>От 10 000 P</span>
             </li>
             <li>
-                <img alt="перев" width="50" length="50" src="./images/ДЛЯ ПРОЕКТА.png">
+                <img alt="перев" width="100" length="100" src="./images/упс.png">
                 <h3>Устная переводческая скоропись</h3> 
                 <p>Длительность: 35 часов</p>
                 <p>Модулей: 3</p>
@@ -44,7 +44,7 @@
                 <span>От 6 500 P</span>
             </li>
             <li>
-                <img alt="перев" width="50" length="50" src="./images/ДЛЯ ПРОЕКТА.png">
+                <img alt="перев" width="100" length="100" src="./images/спец.png">
                 <h3>Специальный перевод</h3> 
                 <p>Длительность: 40 часов</p>
                 <p>Модулей: 3</p>
