--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <header>
       <img alt="logo" width="250" length="250" src="./images/logo.png">
+      <title>ПереводчикPRO</title>
       <nav>
 
       </nav>
@@ -61,7 +62,12 @@
         
     </section>
     <footer>
-        
+        <p>Сайт создан Васильевой Дарьей и Тонушкиной Юлией группа ЛВ-22</p>
+        <ul>
+            <li><a href="#">Правовая оговорка</a></li>
+            <li><a href="#">Пользовательское соглашение</a></li>
+            <li><a href="#">Политика конфидециальности</a></li>
+        </ul>
     </footer>
 </main>
     <h1>С нами ты станешь мастером перевода</h1>
