--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
   <header>
       <img alt="logo" width="250" length="250" src="./images/logo.png">
-      <title>ПереводчикPRO</title>
       <nav>
 
       </nav>
@@ -57,10 +56,14 @@
         <a href="#" target="_blank">Все курсы</a>
     </div>
     
-    </section>
-    <section>
-        
-    </section>
+    <sectiom>
+        <form action="/"
+            <h1>Вход в личный кабинет</h1>
+            <input type="tel" name="phone" placeholder="Номер телефона" required>
+            <input type="password" name="password" placeholder="Пароль" required>
+            <button>Войти</button>
+       </form>
+    </sectiom>
     <footer>
         <p>Сайт создан Васильевой Дарьей и Тонушкиной Юлией группа ЛВ-22</p>
         <ul>
