--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <input type="tel" name="phone" placeholder="Номер телефона" required>
             <input type="password" name="password" placeholder="Пароль" required>
             <button>Войти</button>
+            <button>Регистрация</button>
        </form>
     </sectiom>
     <footer>
