--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-      <h1>С нами ты станешь мастером перевода</h1>
+      <h1>С ПереводчикPRO ты станешь мастером перевода</h1>
       <img alt="logo" width="250" length="250" src="./images/logo.png">
       <nav>
 
