--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
       <h1>С ПереводчикPRO ты станешь мастером перевода</h1>
       <img alt="logo" width="250" length="250" src="./images/logo.png">
      <nav>
-            <ul>
-              <li><a href="#">Главная</a></li>
-              <li><a href="#">Курсы</a></li>
-              <li><a href="#">О нас</a></li>
-              <li><a href="#">Наши преподаватели</a></li>
-              <li><a href="#">Контакты</a></li>
+            <ul class="menu">
+              <li class="menu__item menu__item--active"
+                   <a class="menu__link" href="index.html">Главная</a>
+              </li>
+              <li class="menu__item">
+                  <a class="menu__link" href="#">Курсы</a>
+              </li>
+              <li class="menu__item">
+                   <a class="menu__link" href="#">О нас</a>
+              </li>
+              <li class="menu__item">
+                   <a class="menu__link" href="#">Наши преподаватели</a>
+              </li>
+              <li class="menu__item">
+                  <a class="menu__link" href="#">Контакты</a>
+              </li>
           </ul>
       </nav>
     <button>Выбрать курс</button>
