--- a/index.html
+++ b/index.html
@@ -284,5 +284,7 @@
             </div>
         </div>
     </footer>
+        <p>Сайт создан Васильевой Дарьей и Тонушкиной Юлией группа ЛВ-22</p>
+        <ul>
 </body>
 </html>
