--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <nav>
                     <ul>
                         <li><a href="#">Главная</a></li>
-                        <li><a href="#">Курсы</a></li>
+                         <li><a href="courses.html">Курсы</a></li>
                         <li><a href="#">О нас</a></li>
                         <li><a href="#">Отзывы</a></li>
                         <li><a href="#">Контакты</a></li>
